--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script src="script.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div id="playerScoreTitle">Your score</div>
+    <div id="title">Rock Paper Scissors</div>
+    <div id="compScoreTitle">Computer score</div>
+    <div id="playerScore">0</div>
+    <div id="display">Let's play a game</div>
+    <div id="compScore">0</div>
+    <div class="buttons">
+      <button id="rock">Rock</btn>
+      <button id="paper">Paper</btn>
+      <button id="scissors">Scissors</btn>
+    </div>
+  </div>
 </body>
 </html>
