--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="title">Rock Paper Scissors</div>
     <div id="compScoreTitle">Computer score</div>
     <div id="playerScore">0</div>
-    <div id="display">Let's play a game</div>
+    <div id="display">Let's play!</div>
     <div id="compScore">0</div>
     <div class="buttons">
       <button id="rock">Rock</btn>
